PowerMode is no longer a component